--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
           <version>1.10.19</version>
           <scope>test</scope>
       </dependency>
+      <dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-all</artifactId>
+          <version>2.0.2-beta</version>
+          <scope>compile</scope>
+      </dependency>
 
   </dependencies>
 
